# clicker

./: .gitignore  LICENSE  Pipfile  README.md  clicker.py  pyproject.toml  pytest.ini  pytest_clicker.py  setup.cfg  setup.py
clicker/: __init__.py  cli.py  clicker  main.py
clicker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_base.py  test_hello.py
