[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "clicker"
author = "Ryan Wang"
author-email = "hwwangwang@gmail.com"
home-page = "https://github.com/ryanwang520"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
clicker = "clicker:main"

[tool.flit.entrypoints."pytest11"]
clicker = "pytest_clicker"
