[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "clicker"
author = "Ryan Wang"
author-email = "hwwangwang@gmail.com"
home-page = "https://github.com/ryanwang520"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
clicker = "clicker:main"

[tool.flit.entrypoints."pytest11"]
clicker = "pytest_clicker"


[tool.poetry]
name = "clicker"
version = "0.2.5"
description = "The description of the package"

license = "MIT"

authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/sdispater/poetry"
homepage = "https://github.com/sdispater/poetry"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "~2.7 || ^3.2"  # Compatible python versions must be declared here
toml = "^0.9"
"oslo.utils" = "1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
my-script = 'clicker:main'
